added the docker-compose adapter
