# api.yaml
@@ -357,6 +357,72 @@ paths:
           description: Network not found
           schema:
             type: string
+  /packages:
+    post:
+      tags:
+        - Package
+      summary: Receives a package.
+      description: Receives a package so that it can be forwarded to the correct environment.
+      operationId: receivePackage
+      consumes:
+        - multipart/form-data
+      produces:
+        - application/json
+      parameters:
+        - in: formData
+          name: file
+          description: Package in a multipart form
+          required: true
+          type: file
+      responses:
+        '200':
+          description: Package received OK
+          schema:
+            $ref: '#/definitions/ResourceGroup'
+        '201':
+          description: Created
+        '400':
+          description: Bad Request
+          schema:
+            type: string
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+          schema:
+            type: string
+  '/packages/{id}':
+    delete:
+      tags:
+        - Package
+      summary: Deletes a package.
+      description: Deletes the package that matches with a given ID.
+      operationId: deletePackage
+      parameters:
+        - name: id
+          in: path
+          description: ID of Package
+          required: true
+          type: string
+      responses:
+        '200':
+          description: Package deleted successfully
+        '204':
+          description: No Content
+        '400':
+          description: Bad Request
+          schema:
+            type: string
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Package not found
+          schema:
+            type: string
   /pop:
     get:
       tags:
